design/grammar_phase1.ebnf
program = { module } ;

module = [{ useStmt }] , { declaration } ;
useStmt = "use" , identifier , [{ "." , identifier }] , ";" ;

declaration = classDecl
            | functionDecl
            | varDecl ;
classDecl = "class" , identifier , parameters , [ ":" , type , { ", " type } ] , blockStmt ;
functionDecl = "fn" , identifier , parameters , [ ":" , type ] , blockStmt ;
varDecl = "let" , identifier , "=" , expression , ";" ;

parameters = "(" , [ parameter , [{ "," , parameter }] ] , ")" ;
parameter = identifier , ":" , type ;

statement = expressionStmt
          | blockStmt
          | assignmentStmt
          | returnStmt
          |ifStmt ;
expressionStmt = expression , ";" ;
blockStmt = [{ varDecl | statement }] ;
assignmentStmt = identifierExpr , ( "=" | "+=" | "-=" | "*=" | "/=" ) , expressionStmt ;
returnStmt = "ret" , expression ;
ifStmt = "if" , expression , ( blockStmt | ":" , expressionStmt ) ;

expression = precedenceExpr ;
precedenceExpr = ? unary/binary expression with primaryExpr as values ? ;
castExpr = expression , [ "as" type ] ;
indexerExpr = primaryExpr , [ "[" , expression , "]" ] ;
primaryExpr = identifierExpr
            | groupExpr
            | newExpr
            | literal
            | ifExpr
            | listExpr ;

identifierExpr = [ identifier , [{ "->" , identifier }] ] ,
                 identifier , [ arguments ] , [{ "." , identifier , [ arguments ] }];
groupExpr = "(" , expression , ")" ;
newExpr = "new" , type , arguments ;
literal = bool | number | string | char ;
listExpr = "[" , expression , [ "," , expression ] , "]" ;

arguments = "(" , [ expression , [{ "," , expression }] ] , ")" ;

bool = "true" | "false" ;
number = /[0-9]+(\.[0-9]+)/ ;
string = '"' , ? anything ? , '"' ;
char = "'" , ? any utf-8 character ? , '"' ; (* utf-8? *)
identifier = /[A-z_]+/ ;
